# Protocols

./: .gitignore  README.md  build.sh
ApplicationLayer/DNS/: README.md
ApplicationLayer/DNS/echo_client_server/Rust/: Cargo.toml  client.rs  server.rs
ApplicationLayer/HTTP/1.1/: README.md
ApplicationLayer/HTTP/1.1/echo_server/Rust/axum/: Cargo.toml  client.rs  server.rs
ApplicationLayer/MQTT/Go/client/: client.go  go.mod
ApplicationLayer/MQTT/Go/server/: go.mod  server.go
ApplicationLayer/SFTP/: README.md
ApplicationLayer/SSH/: README.md
ApplicationLayer/SSH/echo_server/Go/: go.mod
DataLinkLayer/VLAN/: README.md
DataLinkLayer/VxLAN/: README.md
NetworkLayer/ARP/: README.md
NetworkLayer/BGP/: README.md
NetworkLayer/ICMP/: README.md
NetworkLayer/IGMP/: README.md
NetworkLayer/IP/IPv4/: README.md
NetworkLayer/Mesh/Reticulum/: README.md
PhysicalLayer/Cellular/1G/: README.md
PhysicalLayer/Cellular/1G/C++/: CMakeLists.txt  signal_vizual.cpp
PhysicalLayer/Cellular/2G/: README.md
PhysicalLayer/Cellular/3G/: README.md
PhysicalLayer/Cellular/4G/: README.md
PhysicalLayer/Cellular/5G/: README.md
PhysicalLayer/Cellular/6G/: README.md
TransportLayer/SCTP/echo_server/Rust/: Cargo.toml  client.rs  server.rs
TransportLayer/TCP/: README.md  client.c  server.c  tcp.c  tcp.h  tcp_client  tcp_server
TransportLayer/TCP/1000_clients/C++/: client  client.cpp  delegator.cpp  server  server.cpp
TransportLayer/TCP/echo_server/: client.c  server.c  tcp_client  tcp_server
TransportLayer/TCP/echo_server/Bash/: client.sh  server.sh
TransportLayer/TCP/echo_server/C/: client.c  server.c  tcp.c
TransportLayer/TCP/echo_server/C++/: client  client.cpp  server  server.cpp
TransportLayer/TCP/echo_server/Go/: client.go  server.go
TransportLayer/TCP/echo_server/Rust/: Cargo.toml  client.rs  server.rs
TransportLayer/TCP/echo_server/Zig/: client.zig  server.zig
TransportLayer/TCP/graceful_disconnect/C++/: client  client.cpp  server  server.cpp
TransportLayer/TCP/graceful_disconnect/Rust/: Cargo.toml  client.rs  server.rs
TransportLayer/TCP/multiple_clients/C++/: client  server  server.cpp
TransportLayer/UDP/: README.md
(+53 files in other folders)
